--- a/index.html
+++ b/index.html
@@ -36,40 +36,28 @@
 
     <section id="steps">
         <div class="container">
-            <div class="row">
-                <h1 class="text-center mt-2">Steps</h1>
-                <!-- Short description and step one -->
-                <div class="col-md-6">
-                    <p>We’re constantly bombarded with messages about what makes for a good life. Advertisers tell us it
-                        comes from
-                        owning and consuming their products. The media associate it with wealth, beauty or fame. And
-                        politicians
-                        claim that nothing matters more than growing the economy. But do any of these things really
-                        bring lasting
-                        happiness?
+            <!-- Bit of background part -->
+            <div class="row py-3">
+                <div class="col-12 text-center">
+                    <h2>Ten easy steps to Better Living</h2>
+                    We’re constantly bombarded with messages about what makes for a good life. Advertisers tell us it
+                    comes from owning and consuming their products. The media associate it with wealth, beauty or fame.
+                    And politicians claim that nothing matters more than growing the economy. But do any of these things
+                    really bring lasting happiness?
 
-                        For thousands of years, people have looked to philosophy, religion and grandmotherly wisdom for
-                        answers to
-                        such questions. But in recent decades this ancient wisdom has been tested by scientific
-                        research.
+                    For thousands of years, people have looked to philosophy, religion and grandmotherly wisdom for
+                    answers to such questions. But in recent decades this ancient wisdom has been tested by scientific
+                    research.
 
-                        Scientists have found that although our genes and circumstances matter, a huge proportion of the
-                        variations
-                        in happiness between us come from our choices and activities. So although we may not be able to
-                        change our
-                        inherited characteristics or the circumstances in which we find ourselves, we still have the
-                        power to change
-                        how happy we are – by the way we approach our lives.
-
-                        Action for Happiness has identified 10 keys to happier living, based on an extensive review of
-                        the latest
-                        research about what really helps people flourish. These are not “10 commandments”, because each
-                        of us is
-                        unique and what works for one of us may not for someone else. They are simply 10 areas that tend
-                        to make a
-                        big difference to people’s happiness - and crucially they are all areas that are within our
-                        control.</p>
+                    Scientists have found that although our genes and circumstances matter, a huge proportion of the
+                    variations in happiness between us come from our choices and activities. So although we may not be
+                    able to change our inherited characteristics or the circumstances in which we find ourselves, we
+                    still have the power to change how happy we are – by the way we approach our lives.
                 </div>
+            </div>
+            <!-- Steps 1 and 2 -->
+            <div class="row py-3">
+                <!-- Step 1: Do things for others -->
                 <div class="col-md-6">
                     <h2>1. Do things for others</h2>
                     <p>Caring about others is fundamental to our happiness. Helping other people is not only good for
@@ -85,9 +73,8 @@
                             know you care.</li>
                     </ul>
                 </div>
-            </div>
-            <!-- Steps 2 and 3 -->
-            <div class="row">
+
+                <!-- Step 2: Connect with people -->
                 <div class="col-md-6">
                     <h2>2. Connect with people</h2>
                     <p>Our relationships with other people are the most important thing for our happiness. People with
@@ -103,6 +90,11 @@
                             name of someone new.</li>
                     </ul>
                 </div>
+            </div>
+
+            <!-- Steps 3 and 4 -->
+            <div class="row py-3">
+                <!-- Step 3: Take care of your body -->
                 <div class="col-md-6">
                     <h2>3. Take care of your body</h2>
                     <p>Our body and mind are connected. Being active makes us happier as well as healthier. It instantly
@@ -113,14 +105,13 @@
                     <ul>
                         <h3>Action ideas</h3>
                         <li>Be more active today. Get off the bus a stop early, take the stairs, turn off the TV, go for
-                            a walk – anything that gets you moving..</li>
+                            a walk – anything that gets you moving.</li>
                         <li>Eat nutritious food, drink more water, catch up on sleep. Notice which healthy actions lift
                             your mood and do more of them.</li>
                     </ul>
                 </div>
-            </div>
-            <!-- Steps 4 and 5 -->
-            <div class="row">
+
+                <!-- Step 4: Notice the world around you -->
                 <div class="col-md-6">
                     <h2>4. Notice the world around you</h2>
                     <p>Have you ever felt there must be more to life? Good news – there is. And it’s right here in front
@@ -131,12 +122,16 @@
                     <ul>
                         <h3>Action ideas</h3>
                         <li>Give yourself a bit of head space. At least once a day, stop and take five minutes to just
-                            breathe and be in the moment.
-                        </li>
+                            breathe and be in the moment.</li>
                         <li>Notice and appreciate good things around you every day, big or small. Trees, birdsong, the
                             smell of coffee, laughter perhaps?</li>
                     </ul>
                 </div>
+            </div>
+
+            <!-- Steps 5 and 6 -->
+            <div class="row py-3">
+                <!-- Step 5: Keep learning -->
                 <div class="col-md-6">
                     <h2>5. Keep learning</h2>
                     <p>Learning affects our wellbeing in lots of positive ways. It exposes us to new ideas and helps us
@@ -153,9 +148,8 @@
                             perhaps. Cook a new meal or use a new word.</li>
                     </ul>
                 </div>
-            </div>
-            <!-- Steps 6 and 7 -->
-            <div class="row">
+
+                <!-- Step 6: Have goals to look forward to -->
                 <div class="col-md-6">
                     <h2>6. Have goals to look forward to</h2>
                     <p>Feeling good about the future is really important for our happiness. We all need goals to
@@ -166,12 +160,16 @@
                     <ul>
                         <h3>Action ideas</h3>
                         <li>Take the first step. Think of a goal you’re aiming for and do one thing to get started. Make
-                            a call, fill in that form, tell others.
-                        </li>
+                            a call, fill in that form, tell others.</li>
                         <li>Share your dreams. Tell three people about an aspiration that is really important to you
                             this year and listen to theirs too.</li>
                     </ul>
                 </div>
+            </div>
+
+            <!-- Steps 7 and 8 -->
+            <div class="row py-3">
+                <!-- Step 7: Find ways to bounce back -->
                 <div class="col-md-6">
                     <h2>7. Find ways to bounce back</h2>
                     <p>All of us have times of stress, loss, failure or trauma in our lives. How we respond to these
@@ -188,9 +186,8 @@
                             new perspective on the problem.</li>
                     </ul>
                 </div>
-            </div>
-            <!-- Steps 8 and 9 -->
-            <div class="row">
+
+                <!-- Step 8: Take a positive approach -->
                 <div class="col-md-6">
                     <h2>8. Take a positive approach</h2>
                     <p>Positive emotions – like joy, gratitude, contentment, inspiration and pride – don’t just feel
@@ -201,12 +198,16 @@
                     <ul>
                         <h3>Action ideas</h3>
                         <li>Do something that you know will make you feel good. Listen to music, watch something funny,
-                            get outside or call an old friend.
-                        </li>
+                            get outside or call an old friend.</li>
                         <li>Try to smile and say something positive or constructive every time you walk into a room.
                             Notice the reaction you get.</li>
                     </ul>
                 </div>
+            </div>
+
+            <!-- Steps 9 and 10 -->
+            <div class="row py-3">
+                <!-- Step 9: Be comfortable with who you are -->
                 <div class="col-md-6">
                     <h2>9. Be comfortable with who you are</h2>
                     <p>Nobody’s perfect. But so often we compare a negative view of ourselves with an unrealistic view
@@ -217,34 +218,39 @@
                     </p>
                     <ul>
                         <h3>Action ideas</h3>
-                        <li>Ask a trusted friend or colleague to tell you what they think your real strengths are. Try
-                            to make more use of these.</li>
-                        <li>Be as kind to yourself as you are to others. See your mistakes as opportunities to learn.
-                            Notice things you do well, however small.</li>
+                        <li>Write down three things that are great about you. Share these with someone you trust. Don’t
+                            be shy!</li>
+                        <li>Look for positives about the things that frustrate you – what could be seen as a ‘weakness’,
+                            but is actually a strength?</li>
                     </ul>
                 </div>
-            </div>
-            <!-- Steps 10 -->
-            <div class="row">
+
+                <!-- Step 10: Give thanks -->
                 <div class="col-md-6">
-                    <h2>10. Be part of something bigger</h2>
-                    <p>People who have meaning and purpose in their lives are happier, feel more in control and get more
-                        out of what they do. They also experience less stress, anxiety and depression. But where do we
-                        find meaning and purpose? It might come from doing a job that makes a difference, our religious
-                        or spiritual beliefs, or our family. The answers vary for each of us but they all involve being
-                        connected to something bigger than ourselves.</p>
+                    <h2>10. Give thanks</h2>
+                    <p>Being grateful helps us appreciate the positive things in our lives. People who regularly express
+                        gratitude feel happier, healthier and more fulfilled. In fact, the more grateful we are, the
+                        better we feel. And the more we focus on what’s good in our lives, the more good things we tend
+                        to notice. Gratitude helps shift our mindset from what we don’t have to what we do.</p>
                     <ul>
                         <h3>Action ideas</h3>
-                        <li>Feel part of something bigger. Spend time with children, visit an inspiring location, gaze
-                            at the stars or join a club.
-                        </li>
-                        <li>Be more charitable. Give others your time, offer to help neighbours or friends, consider
-                            giving blood or volunteering.</li>
+                        <li>Keep a gratitude journal. At the end of each day, write down three things you are grateful
+                            for.</li>
+                        <li>At the end of each week, share three things you are grateful for with your friends, family
+                            or
+                            colleagues.</li>
                     </ul>
                 </div>
             </div>
+
         </div>
     </section>
+
+    <footer class="text-center">
+        <div class="container">
+            <p>Designed with <span class="text-danger">&hearts;</span> by Gjin Stublla</p>
+        </div>
+    </footer>
 
     <!-- Back to Top Button -->
     <a id="backtotop-button">↑</a>
