--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
     <section id="steps">
         <div class="container">
             <!-- Bit of background part -->
-            <div class="row py-3">
+            <div class="row py-4">
                 <div class="col-12 text-center">
                     <h2>Ten easy steps to Better Living</h2>
-                    We’re constantly bombarded with messages about what makes for a good life. Advertisers tell us it
-                    comes from owning and consuming their products. The media associate it with wealth, beauty or fame.
-                    And politicians claim that nothing matters more than growing the economy. But do any of these things
-                    really bring lasting happiness?
-
-                    For thousands of years, people have looked to philosophy, religion and grandmotherly wisdom for
-                    answers to such questions. But in recent decades this ancient wisdom has been tested by scientific
-                    research.
-
-                    Scientists have found that although our genes and circumstances matter, a huge proportion of the
-                    variations in happiness between us come from our choices and activities. So although we may not be
-                    able to change our inherited characteristics or the circumstances in which we find ourselves, we
-                    still have the power to change how happy we are – by the way we approach our lives.
+                    <p>
+                        We’re constantly bombarded with messages about what makes for a good life. Advertisers tell us it
+                        comes from owning and consuming their products. The media associate it with wealth, beauty or fame.
+                        And politicians claim that nothing matters more than growing the economy. But do any of these things
+                        really bring lasting happiness?
+    
+                        For thousands of years, people have looked to philosophy, religion and grandmotherly wisdom for
+                        answers to such questions. But in recent decades this ancient wisdom has been tested by scientific
+                        research.
+    
+                        Scientists have found that although our genes and circumstances matter, a huge proportion of the
+                        variations in happiness between us come from our choices and activities. So although we may not be
+                        able to change our inherited characteristics or the circumstances in which we find ourselves, we
+                        still have the power to change how happy we are – by the way we approach our lives.
+                    </p>
                 </div>
             </div>
             <!-- Steps 1 and 2 -->
@@ -245,7 +247,48 @@
 
         </div>
     </section>
-
+    <section>
+        <div class="container pt-3">
+            <h2 class="text-center">Do you have any more steps?</h2>
+            <div class="row pt-3">
+                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                    <form class="row g-3">
+                        <div class="col-md-6">
+                          <label for="inputFirstName" class="form-label">First Name</label>
+                          <input type="text" class="form-control" id="inputFirstName" placeholder="John">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputLastName" class="form-label">Last Name</label>
+                          <input type="text" class="form-control" id="inputLastName" placeholder="Doe">
+                        </div>
+                        <div class="col-12">
+                          <label for="inputEmail" class="form-label">Email</label>
+                          <input type="email" class="form-control" id="inputEmail" placeholder="example@email.com">
+                        </div>
+                        <div class="mb-2">
+                            <label for="exampleFormControlTextarea1" class="form-label">Steps</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                          </div>
+                        <div class="col-12 text-center">
+                          <button type="submit" class="btn btn-dark mb-3" style="width: 80px;">Send</button>
+                        </div>
+                      </form>
+                </div>
+                <div class="col-md-6">
+                    <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.576199222431!2d21.189687275986923!3d42.670335471165785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135498cd75256c27%3A0xbbf87d6b640faf83!2sRIT%20Kosovo%20(A.U.K)!5e0!3m2!1sen!2s!4v1744061160058!5m2!1sen!2s"
+                    height="450" style="border:0; width:100%; border-radius: 20px;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <!-- <div class="row">
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.576199222431!2d21.189687275986923!3d42.670335471165785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135498cd75256c27%3A0xbbf87d6b640faf83!2sRIT%20Kosovo%20(A.U.K)!5e0!3m2!1sen!2s!4v1744061160058!5m2!1sen!2s"
+                height="450" style="border:0; width:100%; border-radius: 20px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div> -->
+        </div>
+    </section>
     <footer class="text-center">
         <div class="container">
             <p>Designed with <span class="text-danger">&hearts;</span> by Gjin Stublla</p>
