hero video localized and steps have fadeinleft animation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <!-- Background Video -->
             <video loop autoplay muted playsinline class="position-absolute w-100 h-100">
-                <source src="https://videos.pexels.com/video-files/2307411/2307411-hd_1920_1080_30fps.mp4"
+                <source src="./assets/images/hero.mp4"
                     type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -257,7 +257,7 @@
 
         </div>
     </section>
-    <section>
+    <section id="contact">
         <div class="container pt-3">
             <h2 class="text-center">Do you have any more steps?</h2>
             <div class="row pt-3">
