--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div
                 class="position-relative text-white text-center d-flex flex-column justify-content-center align-items-center h-100">
-                <h1 class="display-3 fw-bold">Ten easy steps to Better Living</h1>
+                <h1 class="display-3 fw-bold">Ten Easy Steps to Better Living</h1>
                 <p class="lead">By Mark Williamson and Vanessa King</p>
                 <a href="#steps" class="btn btn-light mt-2">Browse</a>
             </div>
@@ -44,7 +44,7 @@
             <!-- Bit of background part -->
             <div class="row py-4">
                 <div class="col-12 text-center">
-                    <h2>Ten easy steps to Better Living</h2>
+                    <h2>Ten Easy Steps to Better Living</h2>
                     <p>
                         We’re constantly bombarded with messages about what makes for a good life. Advertisers tell us
                         it
@@ -288,7 +288,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.576199222431!2d21.189687275986923!3d42.670335471165785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135498cd75256c27%3A0xbbf87d6b640faf83!2sRIT%20Kosovo%20(A.U.K)!5e0!3m2!1sen!2s!4v1744061160058!5m2!1sen!2s"
                         height="450" style="border:0; width:100%; border-radius: 20px;" allowfullscreen=""
-                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Google Maps"></iframe>
                 </div>
             </div>
             <!-- <div class="row">
